# 2D_Adventure_Game

./: .gitignore  CMakeLists.txt  README.md  application.cpp  application.hpp  cat.cpp  cat.hpp  chest.cpp  chest.hpp  defines.hpp  demon.cpp  demon.hpp  devil.cpp  devil.hpp  entity.cpp  entity.hpp  main.cpp  map.cpp  map.hpp  player.cpp  player.hpp
fonts/: color.cpp  color.hpp  font.cpp  font.hpp  function.c
mainMenu/: main.cpp  menu.cpp  menu.hpp  widget.cpp  widget.hpp  widget_slider.cpp  widget_slider.hpp
sprite/: cat.aseprite  chest.aseprite
sprite/level/: Sprite-0001.aseprite  cobble0_1.aseprite  cobble0_2.aseprite  tile1.aseprite  wall0_0.aseprite
